[package]
name = "heckdiff"
version = "0.1.0"
authors = ["phynalle <phynalism@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
difflib = "0.4"

[dev-dependencies]
structopt = "0.2"

[[example]]
name = "merge"
crate-type = ["bin"]

