[package]
name = "heckdiff"
version = "0.1.1"
authors = ["phynalle <phynalism@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A 3-way merge tool for all the extension for file (not yet, my hope)"
repository = "https://github.com/phynalle/heckdiff"
keywords = ["diff", "merge"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
difflib = "0.4"
structopt = "0.2"
